# user-app/src/main/resources/static/api/swagger.yml
@@ -3,7 +3,7 @@ info:
   title: Scalable Task Manager User App
   version: "1.0"
 paths:
-  /v1/register:
+  /v1/auth/register:
     post:
       tags:
         - register
@@ -18,8 +18,37 @@ paths:
       responses:
         200:
           description: "User was successfully registered"
+          content:
+            text/plain:
+              schema:
+                type: string
         400:
           description: "Client did not send the server info correctly"
+        500:
+          description: "A generic backend error occurred"
+  /v1/auth/login:
+    post:
+      tags:
+        - login
+      summary: Login a user
+      operationId: loginUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LoginUserDTO"
+      responses:
+        200:
+          description: "User was successfully registered"
+          content:
+            text/plain:
+              schema:
+                type: string
+        400:
+          description: "Client did not send the server info correctly"
+        403:
+          description: "User or password weren't correct"
         500:
           description: "A generic backend error occurred"
   /v1/update:
@@ -46,6 +75,19 @@ components:
     RegisterUserDTO:
       type: object
       required:
+        - fullName
+        - username
+        - password
+      properties:
+        fullName:
+          type: string
+        username:
+          type: string
+        password:
+          type: string
+    LoginUserDTO:
+      type: object
+      required:
         - username
         - password
       properties:
@@ -55,13 +97,7 @@ components:
           type: string
     UpdateUserDTO:
       required:
-        - username
-        - password
         - newPassword
       properties:
-        username:
-          type: string
-        password:
-          type: string
         newPassword:
           type: string
